로그인, 회원가입, 완료

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,13 +1,1 @@
-
-.form-horizontal {
-	background-color : babypink;
-	width="5px" ;
-	height="5px" ;
-	margin="auto" ;
-	position: relative; 
-	
-}
-
-div {
-	align : center;
-}
+body { padding-top: 70px; }
