--- a/WebContent/View/layout/Style.css
+++ b/WebContent/View/layout/Style.css
@@ -1,1 +1,20 @@
-/* body { padding-top: 50px; } */
+<style>
+html, body, h1, h2, h3, h4, h5 {
+	font-family: "Lato", sans-serif
+}
+
+.mySlides {
+	display: none
+}
+
+.w3-left, .w3-right, .w3-tag {
+	cursor: pointer
+}
+
+.w3-tag {
+	height: 15px;
+	width: 15px;
+	padding: 0;
+	margin-top: 6px
+}
+</style>
