디자인 수정

--- a/WebContent/View/layout/Style.css
+++ b/WebContent/View/layout/Style.css
@@ -1,7 +1,9 @@
 <style>
 html, body, h1, h2, h3, h4, h5 {
-	font-family: "Lato", sans-serif
+	font-family: "Lato", sans-serif ;
+	
 }
+
 
 .mySlides {
 	display: none
